# Marvinous

./: .gitattributes  .gitignore  BUILD_AND_DEPLOY.md  Cargo.toml  README.md
ai-monitor-docs/: CONFIG.md  CONTENTS.md  DESIGN.md  EXAMPLE-OUTPUT.md  PROMPT.md  README.md  SPEC.md
config/: hardware-baseline.toml  marvinous.toml
prompts/: system-prompt.txt
scripts/: ollama-vram.sh
src/: config.rs  daily.rs  main.rs
src/collector/: ipmi.rs  journalctl.rs  mod.rs  nvidia.rs  sensors.rs  smart.rs
src/llm/: mod.rs  ollama.rs  prompt.rs
src/output/: mod.rs  report.rs  state.rs
src/web/: handlers.rs  mod.rs  models.rs  server.rs  state.rs
src/web/static/: index.html
systemd/: marvinous-daily.service  marvinous-daily.timer  marvinous-web.service  marvinous.service  marvinous.timer
