[package]
name = "marvinous"
version = "0.1.0"
edition = "2021"
description = "Server monitoring with the personality of a paranoid android"
authors = ["Marvinous Contributors"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
which = "7"

[profile.release]
lto = true
strip = true
